--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Notepad-Sqlite</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Ayarlar</string>
+    <string name="title">Başlık</string>
+    <string name="Note">Not</string>
+    <string name="savenote">Kaydet</string>
 </resources>
